# Buki

./: .gitignore  README.md  index.js  package-lock.json  package.json  utility.js
commands/: countword.js  eval.js  genshin.js  help.js  ping.js  prefix.js  test.js  versions.js  waifu.js  ytsearch.js
data/: guild-configs.json
discord/deprecated/v1/: package-lock.json  utility.js
discord/deprecated/v1/commands/: help.js  ytsearch.js
discord/deprecated/v2/src/: main.rs
discord/deprecated/v3/src/: gateway_opcodes.rs  json.rs  main.rs  message_handler.rs  patterns.rs  tests.rs  util.rs
discord/deprecated/v4/src/: handleCommand.ts  index.ts  regexp.ts
discord/latest/v3/: .env  Cargo.toml  README.md  changes.txt  features.md  rules.md
discord/latest/v3/secret/: env.txt
discord/latest/v3/src/: cache.rs  client.rs  discapi.rs  env.rs  intents.rs  json.rs  main.rs  message_handler.rs  patterns.rs  terminal.rs  types.rs  util.rs
discord/latest/v3/src/commands/: ping.rs  react.rs  sendjson.rs
discord/latest/v4/: package.json
discord/latest/v4/src/: constants.ts  debug.ts  handleCommand.ts  index.ts  tests.ts  util.ts
discord/stable/v1/: README.md  package.json
discord/stable/v1/src/: commands.ts  debugging.ts  index.ts  (+4 more)
discord/versions/v1/: index.js
discord/versions/v2/: .env  Cargo.toml  Makefile.toml
discord/versions/v2/src/commands/: mod.rs
genshin-api/: characters.d.ts  characters.js  characters.json  costumes.json  genshin-impact-account.d.ts  index.js  locales.json
whatsapp/v1/: .gitignore  Cargo.toml
whatsapp/v1/src/: index.js  main.rs
(+17 files in other folders)
