[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
futures-util = "0.3.29"
hashbrown = "0.14.3"
ngrok = "0.13.1"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = "0.11.22"
rocket = "0.5.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
websocket-lite = "0.5.2"
