[package]
name = "buki"
version = "0.1.0"
authors = ["valcubetaa@gmail.com"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.11"

[dependencies.regex]
version = "1.10.2"
features = ["unicode-case"]